--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valorant Match Tracker</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" type='text/css' href="./static/style.css">
 </head>
 <body>
     <h1>Valorant Match Tracker</h1>
@@ -18,3 +18,31 @@
         <li>/stats_update to update the stats of the selected player, after that the stats will be automatically update</li>
 </body>
 </html>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f0f0f0;
+    }
+    h1 {
+        text-align: center;
+    }
+    p {
+        text-align: center;
+    }
+    a {
+        display: block;
+        text-align: center;
+        margin: 10px;
+    }
+    ul {
+        text-align: center;
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+    }
+    li {
+        margin: 10px;
+    }
+</style>
