--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
         <li>/link to link your Riot account in order to become tracked-able</li>
         <li>/set_tracker to set a tracker in the specific channel and player for a linked player</li>
         <li>/stats_update to update the stats of the selected player, after that the stats will be automatically update</li>
+    </ul>
+    <h2>Preview:</h2>
+    <img src="./螢幕擷取畫面 2024-09-12 093055.png">
+    <img src="./螢幕擷取畫面 2024-09-12 093327.png">
 </body>
 </html>
