--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valorant Match Tracker</title>
     <link rel="stylesheet" type='text/css' href="./static/style.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
     <h1>Valorant Match Tracker</h1>
@@ -20,5 +21,6 @@
     <h2>Preview:</h2>
     <img src="./螢幕擷取畫面 2024-09-12 093055.png">
     <img src="./螢幕擷取畫面 2024-09-12 093327.png">
+    <a href="ToS.html">Term of Service</a>
 </body>
 </html>
