--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <li>/stats_update to update the stats of the selected player, after that the stats will be automatically update</li>
     </ul>
     <h2>Preview:</h2>
-    <img src="./螢幕擷取畫面 2024-09-12 093055.png">
-    <img src="./螢幕擷取畫面 2024-09-12 093327.png">
+    <div class="preview">
+        <img src="./螢幕擷取畫面 2024-09-12 093055.png">
+        <img src="./螢幕擷取畫面 2024-09-12 093327.png">
+    </div>
     <a href="ToS.html">Term of Service</a>
 </body>
 </html>
