--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <img src="./螢幕擷取畫面 2024-09-12 093055.png">
         <img src="./螢幕擷取畫面 2024-09-12 093327.png">
     </div>
-    <a href="ToS.html">Term of Service</a>
+    <p>
+        <a href="ToS.html">Term of Service</a>
+        <a href="mailto:samuelhsieh0829@gmail.com">Support</a>
+    </p>
 </body>
 </html>
