--- a/ToS.html
+++ b/ToS.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Privacy Policy</h1>
     Valorant Match Tracker collects data from you and your Riot Account, once authorised with the Riot Services.<br>
-    This allows Valorant Match Tracker to keep track of your match history, rank data, and more. <br>
+    Once you have opted-in Valorant Match Tracker with the Riot Services, you are allowing Valorant Match Tracker to access your data. <br>
+    This allows Valorant Match Tracker to keep tracking your match history, rank data, and more. <br>
     Valorant Match Tracker also collects data from Discord e.g. User ID ,Channel ID and Guild ID for the linking process, match notifications, and more. <br>
     This allows us to use our services to its fullest extents. Other users may be able to view your data e.g. stats, matches score and kda. <br>
     Your personal data will not be shared with third parties. You can opt-out at any time and your data will be instantly deleted. <br>
@@ -17,7 +18,10 @@
     <h1>Terms of Service</h1>
     By using our Service, you are agreeing to be bound by these Terms and Conditions. Valorant Match Tracker is what it is. <br>
     We reverse the right to revoke the access of any user, at any time, without notice. <br>
-    These Terms and Conditions are subject to change at any point
+    These Terms and Conditions are subject to change at any point in time. <br>
+    <h1>Opt-In Policy</h1>
+    Valorant Match Tracker Opt-In will allow the Client to view data e.g. match statistics, player info, and more. <br>
+    Signing into our Opt-In, you will ackowledge that your profile is public and this data is accessible.
     <a href="index.html">Go Back</a>
 </body>
 </html>
