--- a/ToS.html
+++ b/ToS.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Privacy Policy</h1>
     Valorant Match Tracker collects data from you and your Riot Account, once authorised with the Riot Services.<br>
-    Once you have opted-in Valorant Match Tracker with the Riot Services, you are allowing Valorant Match Tracker to access your data. <br>
+    Once you have sign in Valorant Match Tracker with the Riot Services, you are allowing Valorant Match Tracker to access your data. <br>
     This allows Valorant Match Tracker to keep tracking your match history, rank data, and more. <br>
     Valorant Match Tracker also collects data from Discord e.g. User ID ,Channel ID and Guild ID for the linking process, match notifications, and more. <br>
     This allows us to use our services to its fullest extents. Other users may be able to view your data e.g. stats, matches score and kda. <br>
@@ -21,7 +21,7 @@
     These Terms and Conditions are subject to change at any point in time. <br>
     <h1>Opt-In Policy</h1>
     Valorant Match Tracker Opt-In will allow the Client to view data e.g. match statistics, player info, and more. <br>
-    Signing into our Opt-In, you will ackowledge that your profile is public and this data is accessible.
+    Signing into our Opt-In, you will ackowledge that your profile is public and the data is accessible by everyone who uses our service. <br>
     <a href="index.html">Go Back</a>
 </body>
 </html>
