--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <h1>Valorant Match Tracker</h1>
-    <p>This is a Discord bot, which can track your match score on your discord server :)</p>
+    <p>This is a Discord bot that tracks your match scores in your Discord server!</p>
     <p>Invite the bot to your server by clicking the link below:</p>
     <a href="https://discord.com/oauth2/authorize?client_id=1280135424555225139&permissions=8&integration_type=0&scope=bot">Invite the bot</a>
-    <p>After inviting the bot, you can use the following commands:</p>
+    <p>Once the bot is invited, you can use the following commands:</p>
     <ul>
-        <li>/link to link your Riot account in order to become tracked-able</li>
-        <li>/set_tracker to set a tracker in the specific channel and player for a linked player</li>
-        <li>/stats_update to update the stats of the selected player, after that the stats will be automatically update</li>
+        <li>/link: Link your Riot account to enable match tracking.</li>
+        <li>/set_tracker: Set a tracker in a specific channel for a linked player.</li>
+        <li>/stats_update: Manually update the stats of the selected player. After this, the stats will automatically update.</li>
     </ul>
     <h2>Preview:</h2>
     <div class="preview">
