--- a/ToS.html
+++ b/ToS.html
@@ -13,7 +13,7 @@
     This allows Valorant Match Tracker to keep tracking your match history, rank data, and more. <br>
     Valorant Match Tracker also collects data from Discord e.g. User ID ,Channel ID and Guild ID for the linking process, match notifications, and more. <br>
     This allows us to use our services to its fullest extents. Other users may be able to view your data e.g. stats, matches score and kda. <br>
-    Your personal data will not be shared with third parties. You can opt-out at any time and your data will be instantly deleted. <br>
+    Your personal data will not be shared with third parties. You can opt-out at any time by using command /unlink and /clear_tracker and your data will be instantly deleted. <br>
     Any questions please refer an email to samuelhsieh0829@gmail.com. This Privacy Policy can change at any point in time.
     <h1>Terms of Service</h1>
     By using our Service, you are agreeing to be bound by these Terms and Conditions. Valorant Match Tracker is what it is. <br>
